<resources>
    <string name="app_name">Routine Planner</string>
    <string name="settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_date_picker">Date picker</string>
    <string name="positive_button_title">Save</string>
    <string name="negative_button_title">Cancel</string>
    <string name="doing_dialog_title_field_hint">Title</string>
    <string name="menu_action_edit_title">Edit</string>
    <string name="menu_action_delete_title">Delete</string>
    <string name="action_templates">Templates</string>
    <string name="template_edit_name_hint">Template name</string>
    <string name="yet_exist">Yet exist</string>
    <string name="add_new">New</string>
    <string name="create_new_doing">Create new doing note</string>
    <string name="dialog_title_edit_doing">Edit doing</string>
    <string name="dialog_button_ok">OK</string>
    <string name="create_new_template">Create new template</string>
    <string name="choice_from_exist">Choice from exist</string>
    <string name="action_weekdays_doings">Weekdays doings</string>
    <string name="action_dayNight">DayNight</string>
    <string name="action_theme">Themes</string>
    <string name="dayNight_dialog_title">Choice dayNight mode</string>
    <string name="theme_dialog_title">Choice theme</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="creating_new_doing">You want to create new doing or use yet exist?</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="doing_added">Doing %1$s added</string>

    <!--    Weekdays abbreviation-->
    <string name="none_abb">\??</string>
    <string name="monday_abb">Mon</string>
    <string name="tuesday_abb">Tue</string>
    <string name="wednesday_abb">Wed</string>
    <string name="thursday_abb">Thu</string>
    <string name="friday_abb">Fri</string>
    <string name="saturday_abb">Sat</string>
    <string name="sunday_abb">Sun</string>

    <string name="can_reuse">can reuse</string>
    <string name="incorrect_doing_name">Incorrect doing name. Name can\'t be empty</string>
    <string name="copy_day">Copy day</string>
    <string name="selected_day_not_empty">Selected day not empty</string>
    <string name="fragments_subtitle">Fragments</string>
    <string name="attention">Attention</string>
    <string name="not_implemented_yet">Not yet implemented</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="auto">Auto</string>
    <string name="about_app">About application</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="dailydoing">DailyDoing</string>
    <string name="templates">Templates</string>
    <string name="weekday_doings">Weekday doings</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_app_message">We will be grateful for your evaluation and feedback. Thank you!</string>
    <string name="review_success">Thanks for your feedback</string>
    <string name="review_failed">Oops, something goes wrong</string>
    <string name="standard">Standard</string>
    <string name="vasyl">Vasyl</string>

</resources>