<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.hromovych.com.routineplanner.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_date_picker"
        android:icon="@drawable/ic_date_picker"
        android:title="@string/action_date_picker"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_copy_day"
        android:icon="@drawable/ic_copy_day"
        android:title="@string/copy_day"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_templates_list"
        android:title="@string/action_templates"/>

    <item
        android:id="@+id/action_weekdays_doings"
        android:title="@string/action_weekdays_doings"/>

    <item
        android:id="@+id/action_dayNight"
        android:title="@string/action_dayNight"/>

    <item
        android:id="@+id/action_theme"
        android:title="@string/action_theme"/>
</menu>